Update FireShield collisions