@@ -20,7 +20,7 @@
 package me.moros.bending.ability.air;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
 
 import me.moros.atlas.configurate.CommentedConfigurationNode;
@@ -99,7 +99,7 @@ public class AirPunch extends AbilityInstance {
 
   @Override
   public @NonNull Collection<@NonNull Collider> colliders() {
-    return Collections.singletonList(stream.collider());
+    return List.of(stream.collider());
   }
 
   @Override
