@@ -20,7 +20,7 @@
 package me.moros.bending.ability.air;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
 
 import me.moros.atlas.configurate.CommentedConfigurationNode;
@@ -146,7 +146,7 @@ public class AirShield extends AbilityInstance {
 
   @Override
   public @NonNull Collection<@NonNull Collider> colliders() {
-    return Collections.singletonList(new Sphere(center(), userConfig.radius));
+    return List.of(new Sphere(center(), userConfig.radius));
   }
 
   @Override
