@@ -21,10 +21,10 @@ package me.moros.bending.ability.earth;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -250,10 +250,7 @@ public class EarthSmash extends AbilityInstance {
 
   @Override
   public @NonNull Collection<@NonNull Collider> colliders() {
-    if (!state.canCollide()) {
-      return Collections.emptyList();
-    }
-    return Collections.singletonList(boulder.collider());
+    return !state.canCollide() ? List.of() : List.of(boulder.collider());
   }
 
   @Override
