@@ -21,7 +21,7 @@ package me.moros.bending.ability.water;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.function.Predicate;
 
@@ -121,7 +121,7 @@ public class WaterSpout extends AbilityInstance {
 
   @Override
   public @NonNull Collection<@NonNull Collider> colliders() {
-    return Collections.singletonList(spout.collider());
+    return List.of(spout.collider());
   }
 
   public void handleMovement(@NonNull Vector3 velocity) {
